apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  labels:
    app: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
      - name: linkding
        image: sissbruecker/linkding:1.41.0-plus-alpine
        ports:
        - containerPort: 9090
      volumeMounts:
      - name: linkding-data-pvc
        mountPath: "/etc/linkding/data"
        
    
    volumes:
    - name: linkding-data-pvc
      persistentVolumeClaim:
        claimName: linkding-data-pvc
