apps/base/linkding/linkding-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: linkding-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: linkding.test104.pl
    http:
      paths:
      - backend:
          service:
            name: linkding
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
  - linkding.test104.pl
  secretName: grafana-tls
